parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> functions block
Rule 2     program -> block
Rule 3     functions -> functions function
Rule 4     functions -> function
Rule 5     function -> ID LPAREN IDlist RPAREN block
Rule 6     function -> ID LPAREN RPAREN block
Rule 7     block -> LCURLY statements RCURLY
Rule 8     block -> LCURLY RCURLY
Rule 9     statements -> statement statements
Rule 10    statements -> statement
Rule 11    statement -> printsmt
Rule 12    statement -> ifstatement
Rule 13    statement -> whilestatement
Rule 14    statement -> elsestatement
Rule 15    statement -> block
Rule 16    statement -> returnstatement
Rule 17    statement -> expression ASSIGMENT expression SEMICOLON
Rule 18    returnstatement -> RETURN expression SEMICOLON
Rule 19    bodystatement -> statement
Rule 20    printsmt -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 21    whilestatement -> WHILE LPAREN expression RPAREN bodystatement
Rule 22    ifstatement -> IF LPAREN expression RPAREN bodystatement
Rule 23    elsestatement -> ifstatement ELSE bodystatement
Rule 24    expression -> expression PLUS expression
Rule 25    expression -> expression MINUS expression
Rule 26    expression -> expression FLOORDIVISION expression
Rule 27    expression -> expression EXPONENT expression
Rule 28    expression -> expression MODULO expression
Rule 29    expression -> expression TIMES expression
Rule 30    expression -> expression DIVIDE expression
Rule 31    expression -> expression LESSTHAN expression
Rule 32    expression -> expression LESSTHANEQUAL expression
Rule 33    expression -> expression EQUAL expression
Rule 34    expression -> expression NOTEQUAL expression
Rule 35    expression -> expression GREATERTHAN expression
Rule 36    expression -> expression GREATERTHANEQUAL expression
Rule 37    expression -> expression OR expression
Rule 38    expression -> expression AND expression
Rule 39    expression -> expression IN expression
Rule 40    expression -> NOT expression
Rule 41    expression -> PLUS expression
Rule 42    index -> list bracket
Rule 43    index -> STRING bracket
Rule 44    index -> ID bracket
Rule 45    index -> expression bracket
Rule 46    index -> indices
Rule 47    indices -> index bracket
Rule 48    bracket -> LBRACKET expression RBRACKET
Rule 49    list -> LBRACKET RBRACKET
Rule 50    list -> bracket
Rule 51    list -> LBRACKET commalist RBRACKET
Rule 52    commalist -> expression
Rule 53    commalist -> commalist COMMA expression
Rule 54    expressionlist -> expressionlist COMMA expression
Rule 55    expressionlist -> expression
Rule 56    IDlist -> IDlist COMMA ID
Rule 57    IDlist -> ID
Rule 58    expression -> factor
Rule 59    factor -> LPAREN expression RPAREN
Rule 60    funExp -> ID LPAREN expressionlist RPAREN
Rule 61    funExp -> ID LPAREN RPAREN
Rule 62    factor -> INTEGER
Rule 63    factor -> REAL
Rule 64    factor -> STRING
Rule 65    factor -> ID
Rule 66    factor -> list
Rule 67    factor -> index
Rule 68    factor -> funExp

Terminals, with rules where they appear

AND                  : 38
ASSIGMENT            : 17
COMMA                : 53 54 56
DIVIDE               : 30
ELSE                 : 23
EQUAL                : 33
EXPONENT             : 27
FLOORDIVISION        : 26
GREATERTHAN          : 35
GREATERTHANEQUAL     : 36
ID                   : 5 6 44 56 57 60 61 65
IF                   : 22
IN                   : 39
INTEGER              : 62
LBRACKET             : 48 49 51
LCURLY               : 7 8
LESSTHAN             : 31
LESSTHANEQUAL        : 32
LPAREN               : 5 6 20 21 22 59 60 61
MINUS                : 25
MODULO               : 28
NOT                  : 40
NOTEQUAL             : 34
OR                   : 37
PLUS                 : 24 41
PRINT                : 20
RBRACKET             : 48 49 51
RCURLY               : 7 8
REAL                 : 63
RETURN               : 18
RPAREN               : 5 6 20 21 22 59 60 61
SEMICOLON            : 17 18 20
STRING               : 43 64
TIMES                : 29
WHILE                : 21
error                : 

Nonterminals, with rules where they appear

IDlist               : 5 56
block                : 1 2 5 6 15
bodystatement        : 21 22 23
bracket              : 42 43 44 45 47 50
commalist            : 51 53
elsestatement        : 14
expression           : 17 17 18 20 21 22 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 41 45 48 52 53 54 55 59
expressionlist       : 54 60
factor               : 58
funExp               : 68
function             : 3 4
functions            : 1 3
ifstatement          : 12 23
index                : 47 67
indices              : 46
list                 : 42 66
printsmt             : 11
program              : 0
returnstatement      : 16
statement            : 9 10 19
statements           : 7 9
whilestatement       : 13

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . functions block
    (2) program -> . block
    (3) functions -> . functions function
    (4) functions -> . function
    (7) block -> . LCURLY statements RCURLY
    (8) block -> . LCURLY RCURLY
    (5) function -> . ID LPAREN IDlist RPAREN block
    (6) function -> . ID LPAREN RPAREN block

    LCURLY          shift and go to state 5
    ID              shift and go to state 6

    program                        shift and go to state 1
    functions                      shift and go to state 2
    block                          shift and go to state 3
    function                       shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> functions . block
    (3) functions -> functions . function
    (7) block -> . LCURLY statements RCURLY
    (8) block -> . LCURLY RCURLY
    (5) function -> . ID LPAREN IDlist RPAREN block
    (6) function -> . ID LPAREN RPAREN block

    LCURLY          shift and go to state 5
    ID              shift and go to state 6

    block                          shift and go to state 7
    function                       shift and go to state 8

state 3

    (2) program -> block .

    $end            reduce using rule 2 (program -> block .)


state 4

    (4) functions -> function .

    LCURLY          reduce using rule 4 (functions -> function .)
    ID              reduce using rule 4 (functions -> function .)


state 5

    (7) block -> LCURLY . statements RCURLY
    (8) block -> LCURLY . RCURLY
    (9) statements -> . statement statements
    (10) statements -> . statement
    (11) statement -> . printsmt
    (12) statement -> . ifstatement
    (13) statement -> . whilestatement
    (14) statement -> . elsestatement
    (15) statement -> . block
    (16) statement -> . returnstatement
    (17) statement -> . expression ASSIGMENT expression SEMICOLON
    (20) printsmt -> . PRINT LPAREN expression RPAREN SEMICOLON
    (22) ifstatement -> . IF LPAREN expression RPAREN bodystatement
    (21) whilestatement -> . WHILE LPAREN expression RPAREN bodystatement
    (23) elsestatement -> . ifstatement ELSE bodystatement
    (7) block -> . LCURLY statements RCURLY
    (8) block -> . LCURLY RCURLY
    (18) returnstatement -> . RETURN expression SEMICOLON
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression FLOORDIVISION expression
    (27) expression -> . expression EXPONENT expression
    (28) expression -> . expression MODULO expression
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression DIVIDE expression
    (31) expression -> . expression LESSTHAN expression
    (32) expression -> . expression LESSTHANEQUAL expression
    (33) expression -> . expression EQUAL expression
    (34) expression -> . expression NOTEQUAL expression
    (35) expression -> . expression GREATERTHAN expression
    (36) expression -> . expression GREATERTHANEQUAL expression
    (37) expression -> . expression OR expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression IN expression
    (40) expression -> . NOT expression
    (41) expression -> . PLUS expression
    (58) expression -> . factor
    (59) factor -> . LPAREN expression RPAREN
    (62) factor -> . INTEGER
    (63) factor -> . REAL
    (64) factor -> . STRING
    (65) factor -> . ID
    (66) factor -> . list
    (67) factor -> . index
    (68) factor -> . funExp
    (49) list -> . LBRACKET RBRACKET
    (50) list -> . bracket
    (51) list -> . LBRACKET commalist RBRACKET
    (42) index -> . list bracket
    (43) index -> . STRING bracket
    (44) index -> . ID bracket
    (45) index -> . expression bracket
    (46) index -> . indices
    (60) funExp -> . ID LPAREN expressionlist RPAREN
    (61) funExp -> . ID LPAREN RPAREN
    (48) bracket -> . LBRACKET expression RBRACKET
    (47) indices -> . index bracket

    RCURLY          shift and go to state 10
    PRINT           shift and go to state 19
    IF              shift and go to state 21
    WHILE           shift and go to state 22
    LCURLY          shift and go to state 5
    RETURN          shift and go to state 23
    NOT             shift and go to state 25
    PLUS            shift and go to state 24
    LPAREN          shift and go to state 20
    INTEGER         shift and go to state 27
    REAL            shift and go to state 28
    STRING          shift and go to state 29
    ID              shift and go to state 30
    LBRACKET        shift and go to state 34

    statements                     shift and go to state 9
    statement                      shift and go to state 11
    printsmt                       shift and go to state 12
    ifstatement                    shift and go to state 13
    whilestatement                 shift and go to state 14
    elsestatement                  shift and go to state 15
    block                          shift and go to state 16
    returnstatement                shift and go to state 17
    expression                     shift and go to state 18
    factor                         shift and go to state 26
    list                           shift and go to state 31
    index                          shift and go to state 32
    funExp                         shift and go to state 33
    bracket                        shift and go to state 35
    indices                        shift and go to state 36

state 6

    (5) function -> ID . LPAREN IDlist RPAREN block
    (6) function -> ID . LPAREN RPAREN block

    LPAREN          shift and go to state 37


state 7

    (1) program -> functions block .

    $end            reduce using rule 1 (program -> functions block .)


state 8

    (3) functions -> functions function .

    LCURLY          reduce using rule 3 (functions -> functions function .)
    ID              reduce using rule 3 (functions -> functions function .)


state 9

    (7) block -> LCURLY statements . RCURLY

    RCURLY          shift and go to state 38


state 10

    (8) block -> LCURLY RCURLY .

    $end            reduce using rule 8 (block -> LCURLY RCURLY .)
    PRINT           reduce using rule 8 (block -> LCURLY RCURLY .)
    IF              reduce using rule 8 (block -> LCURLY RCURLY .)
    WHILE           reduce using rule 8 (block -> LCURLY RCURLY .)
    LCURLY          reduce using rule 8 (block -> LCURLY RCURLY .)
    RETURN          reduce using rule 8 (block -> LCURLY RCURLY .)
    NOT             reduce using rule 8 (block -> LCURLY RCURLY .)
    PLUS            reduce using rule 8 (block -> LCURLY RCURLY .)
    LPAREN          reduce using rule 8 (block -> LCURLY RCURLY .)
    INTEGER         reduce using rule 8 (block -> LCURLY RCURLY .)
    REAL            reduce using rule 8 (block -> LCURLY RCURLY .)
    STRING          reduce using rule 8 (block -> LCURLY RCURLY .)
    ID              reduce using rule 8 (block -> LCURLY RCURLY .)
    LBRACKET        reduce using rule 8 (block -> LCURLY RCURLY .)
    RCURLY          reduce using rule 8 (block -> LCURLY RCURLY .)
    ELSE            reduce using rule 8 (block -> LCURLY RCURLY .)


state 11

    (9) statements -> statement . statements
    (10) statements -> statement .
    (9) statements -> . statement statements
    (10) statements -> . statement
    (11) statement -> . printsmt
    (12) statement -> . ifstatement
    (13) statement -> . whilestatement
    (14) statement -> . elsestatement
    (15) statement -> . block
    (16) statement -> . returnstatement
    (17) statement -> . expression ASSIGMENT expression SEMICOLON
    (20) printsmt -> . PRINT LPAREN expression RPAREN SEMICOLON
    (22) ifstatement -> . IF LPAREN expression RPAREN bodystatement
    (21) whilestatement -> . WHILE LPAREN expression RPAREN bodystatement
    (23) elsestatement -> . ifstatement ELSE bodystatement
    (7) block -> . LCURLY statements RCURLY
    (8) block -> . LCURLY RCURLY
    (18) returnstatement -> . RETURN expression SEMICOLON
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression FLOORDIVISION expression
    (27) expression -> . expression EXPONENT expression
    (28) expression -> . expression MODULO expression
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression DIVIDE expression
    (31) expression -> . expression LESSTHAN expression
    (32) expression -> . expression LESSTHANEQUAL expression
    (33) expression -> . expression EQUAL expression
    (34) expression -> . expression NOTEQUAL expression
    (35) expression -> . expression GREATERTHAN expression
    (36) expression -> . expression GREATERTHANEQUAL expression
    (37) expression -> . expression OR expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression IN expression
    (40) expression -> . NOT expression
    (41) expression -> . PLUS expression
    (58) expression -> . factor
    (59) factor -> . LPAREN expression RPAREN
    (62) factor -> . INTEGER
    (63) factor -> . REAL
    (64) factor -> . STRING
    (65) factor -> . ID
    (66) factor -> . list
    (67) factor -> . index
    (68) factor -> . funExp
    (49) list -> . LBRACKET RBRACKET
    (50) list -> . bracket
    (51) list -> . LBRACKET commalist RBRACKET
    (42) index -> . list bracket
    (43) index -> . STRING bracket
    (44) index -> . ID bracket
    (45) index -> . expression bracket
    (46) index -> . indices
    (60) funExp -> . ID LPAREN expressionlist RPAREN
    (61) funExp -> . ID LPAREN RPAREN
    (48) bracket -> . LBRACKET expression RBRACKET
    (47) indices -> . index bracket

    RCURLY          reduce using rule 10 (statements -> statement .)
    PRINT           shift and go to state 19
    IF              shift and go to state 21
    WHILE           shift and go to state 22
    LCURLY          shift and go to state 5
    RETURN          shift and go to state 23
    NOT             shift and go to state 25
    PLUS            shift and go to state 24
    LPAREN          shift and go to state 20
    INTEGER         shift and go to state 27
    REAL            shift and go to state 28
    STRING          shift and go to state 29
    ID              shift and go to state 30
    LBRACKET        shift and go to state 34

    statement                      shift and go to state 11
    statements                     shift and go to state 39
    printsmt                       shift and go to state 12
    ifstatement                    shift and go to state 13
    whilestatement                 shift and go to state 14
    elsestatement                  shift and go to state 15
    block                          shift and go to state 16
    returnstatement                shift and go to state 17
    expression                     shift and go to state 18
    factor                         shift and go to state 26
    list                           shift and go to state 31
    index                          shift and go to state 32
    funExp                         shift and go to state 33
    bracket                        shift and go to state 35
    indices                        shift and go to state 36

state 12

    (11) statement -> printsmt .

    PRINT           reduce using rule 11 (statement -> printsmt .)
    IF              reduce using rule 11 (statement -> printsmt .)
    WHILE           reduce using rule 11 (statement -> printsmt .)
    LCURLY          reduce using rule 11 (statement -> printsmt .)
    RETURN          reduce using rule 11 (statement -> printsmt .)
    NOT             reduce using rule 11 (statement -> printsmt .)
    PLUS            reduce using rule 11 (statement -> printsmt .)
    LPAREN          reduce using rule 11 (statement -> printsmt .)
    INTEGER         reduce using rule 11 (statement -> printsmt .)
    REAL            reduce using rule 11 (statement -> printsmt .)
    STRING          reduce using rule 11 (statement -> printsmt .)
    ID              reduce using rule 11 (statement -> printsmt .)
    LBRACKET        reduce using rule 11 (statement -> printsmt .)
    RCURLY          reduce using rule 11 (statement -> printsmt .)
    ELSE            reduce using rule 11 (statement -> printsmt .)


state 13

    (12) statement -> ifstatement .
    (23) elsestatement -> ifstatement . ELSE bodystatement

  ! shift/reduce conflict for ELSE resolved as shift
    PRINT           reduce using rule 12 (statement -> ifstatement .)
    IF              reduce using rule 12 (statement -> ifstatement .)
    WHILE           reduce using rule 12 (statement -> ifstatement .)
    LCURLY          reduce using rule 12 (statement -> ifstatement .)
    RETURN          reduce using rule 12 (statement -> ifstatement .)
    NOT             reduce using rule 12 (statement -> ifstatement .)
    PLUS            reduce using rule 12 (statement -> ifstatement .)
    LPAREN          reduce using rule 12 (statement -> ifstatement .)
    INTEGER         reduce using rule 12 (statement -> ifstatement .)
    REAL            reduce using rule 12 (statement -> ifstatement .)
    STRING          reduce using rule 12 (statement -> ifstatement .)
    ID              reduce using rule 12 (statement -> ifstatement .)
    LBRACKET        reduce using rule 12 (statement -> ifstatement .)
    RCURLY          reduce using rule 12 (statement -> ifstatement .)
    ELSE            shift and go to state 40

  ! ELSE            [ reduce using rule 12 (statement -> ifstatement .) ]


state 14

    (13) statement -> whilestatement .

    PRINT           reduce using rule 13 (statement -> whilestatement .)
    IF              reduce using rule 13 (statement -> whilestatement .)
    WHILE           reduce using rule 13 (statement -> whilestatement .)
    LCURLY          reduce using rule 13 (statement -> whilestatement .)
    RETURN          reduce using rule 13 (statement -> whilestatement .)
    NOT             reduce using rule 13 (statement -> whilestatement .)
    PLUS            reduce using rule 13 (statement -> whilestatement .)
    LPAREN          reduce using rule 13 (statement -> whilestatement .)
    INTEGER         reduce using rule 13 (statement -> whilestatement .)
    REAL            reduce using rule 13 (statement -> whilestatement .)
    STRING          reduce using rule 13 (statement -> whilestatement .)
    ID              reduce using rule 13 (statement -> whilestatement .)
    LBRACKET        reduce using rule 13 (statement -> whilestatement .)
    RCURLY          reduce using rule 13 (statement -> whilestatement .)
    ELSE            reduce using rule 13 (statement -> whilestatement .)


state 15

    (14) statement -> elsestatement .

    PRINT           reduce using rule 14 (statement -> elsestatement .)
    IF              reduce using rule 14 (statement -> elsestatement .)
    WHILE           reduce using rule 14 (statement -> elsestatement .)
    LCURLY          reduce using rule 14 (statement -> elsestatement .)
    RETURN          reduce using rule 14 (statement -> elsestatement .)
    NOT             reduce using rule 14 (statement -> elsestatement .)
    PLUS            reduce using rule 14 (statement -> elsestatement .)
    LPAREN          reduce using rule 14 (statement -> elsestatement .)
    INTEGER         reduce using rule 14 (statement -> elsestatement .)
    REAL            reduce using rule 14 (statement -> elsestatement .)
    STRING          reduce using rule 14 (statement -> elsestatement .)
    ID              reduce using rule 14 (statement -> elsestatement .)
    LBRACKET        reduce using rule 14 (statement -> elsestatement .)
    RCURLY          reduce using rule 14 (statement -> elsestatement .)
    ELSE            reduce using rule 14 (statement -> elsestatement .)


state 16

    (15) statement -> block .

    PRINT           reduce using rule 15 (statement -> block .)
    IF              reduce using rule 15 (statement -> block .)
    WHILE           reduce using rule 15 (statement -> block .)
    LCURLY          reduce using rule 15 (statement -> block .)
    RETURN          reduce using rule 15 (statement -> block .)
    NOT             reduce using rule 15 (statement -> block .)
    PLUS            reduce using rule 15 (statement -> block .)
    LPAREN          reduce using rule 15 (statement -> block .)
    INTEGER         reduce using rule 15 (statement -> block .)
    REAL            reduce using rule 15 (statement -> block .)
    STRING          reduce using rule 15 (statement -> block .)
    ID              reduce using rule 15 (statement -> block .)
    LBRACKET        reduce using rule 15 (statement -> block .)
    RCURLY          reduce using rule 15 (statement -> block .)
    ELSE            reduce using rule 15 (statement -> block .)


state 17

    (16) statement -> returnstatement .

    PRINT           reduce using rule 16 (statement -> returnstatement .)
    IF              reduce using rule 16 (statement -> returnstatement .)
    WHILE           reduce using rule 16 (statement -> returnstatement .)
    LCURLY          reduce using rule 16 (statement -> returnstatement .)
    RETURN          reduce using rule 16 (statement -> returnstatement .)
    NOT             reduce using rule 16 (statement -> returnstatement .)
    PLUS            reduce using rule 16 (statement -> returnstatement .)
    LPAREN          reduce using rule 16 (statement -> returnstatement .)
    INTEGER         reduce using rule 16 (statement -> returnstatement .)
    REAL            reduce using rule 16 (statement -> returnstatement .)
    STRING          reduce using rule 16 (statement -> returnstatement .)
    ID              reduce using rule 16 (statement -> returnstatement .)
    LBRACKET        reduce using rule 16 (statement -> returnstatement .)
    RCURLY          reduce using rule 16 (statement -> returnstatement .)
    ELSE            reduce using rule 16 (statement -> returnstatement .)


state 18

    (17) statement -> expression . ASSIGMENT expression SEMICOLON
    (24) expression -> expression . PLUS expression
    (25) expression -> expression . MINUS expression
    (26) expression -> expression . FLOORDIVISION expression
    (27) expression -> expression . EXPONENT expression
    (28) expression -> expression . MODULO expression
    (29) expression -> expression . TIMES expression
    (30) expression -> expression . DIVIDE expression
    (31) expression -> expression . LESSTHAN expression
    (32) expression -> expression . LESSTHANEQUAL expression
    (33) expression -> expression . EQUAL expression
    (34) expression -> expression . NOTEQUAL expression
    (35) expression -> expression . GREATERTHAN expression
    (36) expression -> expression . GREATERTHANEQUAL expression
    (37) expression -> expression . OR expression
    (38) expression -> expression . AND expression
    (39) expression -> expression . IN expression
    (45) index -> expression . bracket
    (48) bracket -> . LBRACKET expression RBRACKET

    ASSIGMENT       shift and go to state 41
    PLUS            shift and go to state 42
    MINUS           shift and go to state 43
    FLOORDIVISION   shift and go to state 44
    EXPONENT        shift and go to state 45
    MODULO          shift and go to state 46
    TIMES           shift and go to state 47
    DIVIDE          shift and go to state 48
    LESSTHAN        shift and go to state 49
    LESSTHANEQUAL   shift and go to state 50
    EQUAL           shift and go to state 51
    NOTEQUAL        shift and go to state 52
    GREATERTHAN     shift and go to state 53
    GREATERTHANEQUAL shift and go to state 54
    OR              shift and go to state 55
    AND             shift and go to state 56
    IN              shift and go to state 57
    LBRACKET        shift and go to state 59

    bracket                        shift and go to state 58

state 19

    (20) printsmt -> PRINT . LPAREN expression RPAREN SEMICOLON

    LPAREN          shift and go to state 60


state 20

    (59) factor -> LPAREN . expression RPAREN
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression FLOORDIVISION expression
    (27) expression -> . expression EXPONENT expression
    (28) expression -> . expression MODULO expression
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression DIVIDE expression
    (31) expression -> . expression LESSTHAN expression
    (32) expression -> . expression LESSTHANEQUAL expression
    (33) expression -> . expression EQUAL expression
    (34) expression -> . expression NOTEQUAL expression
    (35) expression -> . expression GREATERTHAN expression
    (36) expression -> . expression GREATERTHANEQUAL expression
    (37) expression -> . expression OR expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression IN expression
    (40) expression -> . NOT expression
    (41) expression -> . PLUS expression
    (58) expression -> . factor
    (59) factor -> . LPAREN expression RPAREN
    (62) factor -> . INTEGER
    (63) factor -> . REAL
    (64) factor -> . STRING
    (65) factor -> . ID
    (66) factor -> . list
    (67) factor -> . index
    (68) factor -> . funExp
    (49) list -> . LBRACKET RBRACKET
    (50) list -> . bracket
    (51) list -> . LBRACKET commalist RBRACKET
    (42) index -> . list bracket
    (43) index -> . STRING bracket
    (44) index -> . ID bracket
    (45) index -> . expression bracket
    (46) index -> . indices
    (60) funExp -> . ID LPAREN expressionlist RPAREN
    (61) funExp -> . ID LPAREN RPAREN
    (48) bracket -> . LBRACKET expression RBRACKET
    (47) indices -> . index bracket

    NOT             shift and go to state 25
    PLUS            shift and go to state 24
    LPAREN          shift and go to state 20
    INTEGER         shift and go to state 27
    REAL            shift and go to state 28
    STRING          shift and go to state 29
    ID              shift and go to state 30
    LBRACKET        shift and go to state 34

    expression                     shift and go to state 61
    factor                         shift and go to state 26
    list                           shift and go to state 31
    index                          shift and go to state 32
    funExp                         shift and go to state 33
    bracket                        shift and go to state 35
    indices                        shift and go to state 36

state 21

    (22) ifstatement -> IF . LPAREN expression RPAREN bodystatement

    LPAREN          shift and go to state 62


state 22

    (21) whilestatement -> WHILE . LPAREN expression RPAREN bodystatement

    LPAREN          shift and go to state 63


state 23

    (18) returnstatement -> RETURN . expression SEMICOLON
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression FLOORDIVISION expression
    (27) expression -> . expression EXPONENT expression
    (28) expression -> . expression MODULO expression
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression DIVIDE expression
    (31) expression -> . expression LESSTHAN expression
    (32) expression -> . expression LESSTHANEQUAL expression
    (33) expression -> . expression EQUAL expression
    (34) expression -> . expression NOTEQUAL expression
    (35) expression -> . expression GREATERTHAN expression
    (36) expression -> . expression GREATERTHANEQUAL expression
    (37) expression -> . expression OR expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression IN expression
    (40) expression -> . NOT expression
    (41) expression -> . PLUS expression
    (58) expression -> . factor
    (59) factor -> . LPAREN expression RPAREN
    (62) factor -> . INTEGER
    (63) factor -> . REAL
    (64) factor -> . STRING
    (65) factor -> . ID
    (66) factor -> . list
    (67) factor -> . index
    (68) factor -> . funExp
    (49) list -> . LBRACKET RBRACKET
    (50) list -> . bracket
    (51) list -> . LBRACKET commalist RBRACKET
    (42) index -> . list bracket
    (43) index -> . STRING bracket
    (44) index -> . ID bracket
    (45) index -> . expression bracket
    (46) index -> . indices
    (60) funExp -> . ID LPAREN expressionlist RPAREN
    (61) funExp -> . ID LPAREN RPAREN
    (48) bracket -> . LBRACKET expression RBRACKET
    (47) indices -> . index bracket

    NOT             shift and go to state 25
    PLUS            shift and go to state 24
    LPAREN          shift and go to state 20
    INTEGER         shift and go to state 27
    REAL            shift and go to state 28
    STRING          shift and go to state 29
    ID              shift and go to state 30
    LBRACKET        shift and go to state 34

    expression                     shift and go to state 64
    factor                         shift and go to state 26
    list                           shift and go to state 31
    index                          shift and go to state 32
    funExp                         shift and go to state 33
    bracket                        shift and go to state 35
    indices                        shift and go to state 36

state 24

    (41) expression -> PLUS . expression
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression FLOORDIVISION expression
    (27) expression -> . expression EXPONENT expression
    (28) expression -> . expression MODULO expression
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression DIVIDE expression
    (31) expression -> . expression LESSTHAN expression
    (32) expression -> . expression LESSTHANEQUAL expression
    (33) expression -> . expression EQUAL expression
    (34) expression -> . expression NOTEQUAL expression
    (35) expression -> . expression GREATERTHAN expression
    (36) expression -> . expression GREATERTHANEQUAL expression
    (37) expression -> . expression OR expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression IN expression
    (40) expression -> . NOT expression
    (41) expression -> . PLUS expression
    (58) expression -> . factor
    (59) factor -> . LPAREN expression RPAREN
    (62) factor -> . INTEGER
    (63) factor -> . REAL
    (64) factor -> . STRING
    (65) factor -> . ID
    (66) factor -> . list
    (67) factor -> . index
    (68) factor -> . funExp
    (49) list -> . LBRACKET RBRACKET
    (50) list -> . bracket
    (51) list -> . LBRACKET commalist RBRACKET
    (42) index -> . list bracket
    (43) index -> . STRING bracket
    (44) index -> . ID bracket
    (45) index -> . expression bracket
    (46) index -> . indices
    (60) funExp -> . ID LPAREN expressionlist RPAREN
    (61) funExp -> . ID LPAREN RPAREN
    (48) bracket -> . LBRACKET expression RBRACKET
    (47) indices -> . index bracket

    NOT             shift and go to state 25
    PLUS            shift and go to state 24
    LPAREN          shift and go to state 20
    INTEGER         shift and go to state 27
    REAL            shift and go to state 28
    STRING          shift and go to state 29
    ID              shift and go to state 30
    LBRACKET        shift and go to state 34

    expression                     shift and go to state 65
    factor                         shift and go to state 26
    list                           shift and go to state 31
    index                          shift and go to state 32
    funExp                         shift and go to state 33
    bracket                        shift and go to state 35
    indices                        shift and go to state 36

state 25

    (40) expression -> NOT . expression
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression FLOORDIVISION expression
    (27) expression -> . expression EXPONENT expression
    (28) expression -> . expression MODULO expression
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression DIVIDE expression
    (31) expression -> . expression LESSTHAN expression
    (32) expression -> . expression LESSTHANEQUAL expression
    (33) expression -> . expression EQUAL expression
    (34) expression -> . expression NOTEQUAL expression
    (35) expression -> . expression GREATERTHAN expression
    (36) expression -> . expression GREATERTHANEQUAL expression
    (37) expression -> . expression OR expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression IN expression
    (40) expression -> . NOT expression
    (41) expression -> . PLUS expression
    (58) expression -> . factor
    (59) factor -> . LPAREN expression RPAREN
    (62) factor -> . INTEGER
    (63) factor -> . REAL
    (64) factor -> . STRING
    (65) factor -> . ID
    (66) factor -> . list
    (67) factor -> . index
    (68) factor -> . funExp
    (49) list -> . LBRACKET RBRACKET
    (50) list -> . bracket
    (51) list -> . LBRACKET commalist RBRACKET
    (42) index -> . list bracket
    (43) index -> . STRING bracket
    (44) index -> . ID bracket
    (45) index -> . expression bracket
    (46) index -> . indices
    (60) funExp -> . ID LPAREN expressionlist RPAREN
    (61) funExp -> . ID LPAREN RPAREN
    (48) bracket -> . LBRACKET expression RBRACKET
    (47) indices -> . index bracket

    NOT             shift and go to state 25
    PLUS            shift and go to state 24
    LPAREN          shift and go to state 20
    INTEGER         shift and go to state 27
    REAL            shift and go to state 28
    STRING          shift and go to state 29
    ID              shift and go to state 30
    LBRACKET        shift and go to state 34

    expression                     shift and go to state 66
    factor                         shift and go to state 26
    list                           shift and go to state 31
    index                          shift and go to state 32
    funExp                         shift and go to state 33
    bracket                        shift and go to state 35
    indices                        shift and go to state 36

state 26

    (58) expression -> factor .
